--- a/index.html
+++ b/index.html
@@ -3,12 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Batch-13 Assignment-2</title>
 </head>
-<body>
-    <header></header>
-    <main>Assignment-2</main>
+<body class="inter-font">
+    <header>
+        <nav>
+            <h2 class="brand"><span id="non-grad">Tech</span><span id="grad-1">Wave</span></h2>
+            <div class="nav-links">
+                <ul>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Episodes</a></li>
+                    <li><a href="">Host</a></li>
+                </ul>
+            </div>
+            <div>
+                <button id="grad-2" class="primary-btn">Subscribe<i class="fa-solid fa-arrow-right"></i></button>
+            </div>
+            
+        </nav>
+        <section id="banner">
+            <div class="hero-image">
+                <img src="./assets/microphone.png" alt="">
+            </div>
+            <div class="hero-content">
+                <h1 class="hero-title">TechWave</h1>
+                <p class="hero-description">Your daily dose of tech insights, productivity hacks, and personal growth</p>
+            </div>
+            <div class="hero-btn">
+                <button class="hero-btn-1"><i class="fa-brands fa-spotify"></i> Listen on Spotify</button>
+                <button class="hero-btn-2"><i class="fa-regular fa-envelope"></i> Subscribe</button>
+            </div>
+
+        </section>
+
+    </header>
+
+    <main>
+        <section class="podcast">
+            <div class="podcast-content">
+                <h2 class="podcast-title">About the Podcast</h2>
+                <p class="podcast-description">TechWave is your go-to podcast for staying ahead in the fast-paced world of technology.<p class="podcast-description">We break down complex topics into digestible insights, explore productivity strategies that actually work,
+                </p><p class="podcast-description">and share stories of personal growth from industry leaders.</p>
+                <br>
+                <p class="podcast-description">Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
+            </div>
+            <div class="podcast-success">
+                <div>
+                    <h2>150K+</h2>
+                    <p>Monthly Listeners</p>
+                </div>
+                <div>
+                    <h2>200+</h2>
+                    <p>Episodes Published</p>
+                </div>
+                <div>
+                    <h2>4.9<i class="fa-solid fa-star"></i></h2>
+                    <p>Average Rating</p>
+                </div>
+                <div>
+                    <h2>50+</h2>
+                    <p>Industry Experts</p>
+                </div>
+            </div>
+        </section>
+        <section class="choose-container">
+            <h2 class="choose-title">Why Choose TechWave</h2>
+            <div class="choose-card">
+                <img src="./assets/headphone.png" alt="">
+            </div>
+        </section>
+        
+    </main>
     <footer></footer>
 </body>
 </html>
