my third commit

--- a/index.html
+++ b/index.html
@@ -73,9 +73,60 @@
         </section>
         <section class="choose-container">
             <h2 class="choose-title">Why Choose TechWave</h2>
-            <div class="choose-card">
-                <img src="./assets/headphone.png" alt="">
+            <div class="choose-cards">
+                <div id="audio" class="choose-card">
+                    <img src="./assets/headphone.png" alt="">
+                    <h3 class="card-title">Premium Audio Quality</h3>
+                    <p class="card-description">Experience crystal-clear sound with professional-grade recording equipment and expert audio engineering. Every episode is mastered for optimal listening across all devices and platforms.</p>
+                </div>
+                <div id="mobile" class="choose-card">
+                    <img src="./assets/device.png" alt="">
+                    <h3 class="card-title">Mobile Friendly</h3>
+                    <p class="card-description">Listen on the go with seamless mobile experience and offline downloads.</p>
+                </div>
+                <div id="global" class="choose-card">
+                    <img src="./assets/location.png" alt="">
+                    <h3 class="card-title">Global Community</h3>
+                    <p class="card-description">Connect with tech enthusiasts from over 120 countries worldwide.</p>
+                </div>
+                <div id="interview" class="choose-card">
+                    <img src="./assets/resource.png" alt="">
+                    <h3 class="card-title">Exclusive Interviews</h3>
+                    <p class="card-description">Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and success strategies.</p>
+                </div>
+                <div id="resources" class="choose-card">
+                    <img src="./assets/resource.png" alt="">
+                    <h3 class="card-title">Rich Resources</h3>
+                    <p class="card-description">Access show notes, transcripts, and additional learning materials for every episode.</p>
+                </div>
             </div>
+        </section>
+        <section class="episod-container">
+            <h2 class="episod-title">Featured Episodes</h2>
+            <div class="episod-videos">
+                <div class="episod-video">
+                    <iframe src="https://youtu.be/oX7OduG1YmI" frameborder="0"></iframe>
+                    <h3>The Future of AI in Everyday Life</h3>
+                    <p>Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.</p>
+                    <span><i class="fa-regular fa-clock"></i> 42 min</span>
+                </div>
+                <div class="episod-video">
+                    <iframe src="https://youtu.be/oX7OduG1YmI" frameborder="0"></iframe>
+                    <h3>Building Better Habits for Remote Work
+
+                    </h3>
+                    <p>Practical strategies for staying productive and maintaining work-life balance in a remote environment.</p>
+                    <span><i class="fa-regular fa-clock"></i> 35 min</span>
+                </div>
+                <div class="episod-video">
+                    <iframe src="https://youtu.be/oX7OduG1YmI" frameborder="0"></iframe>
+                    <h3>Career Growth in Tech: A Roadmap</h3>
+                    <p>Expert advice on navigating your tech career from junior developer to senior leadership roles.</p>
+                    <span><i class="fa-regular fa-clock"></i> 51 min</span>
+                </div>
+                
+            </div>
+
         </section>
         
     </main>
